--- a/src/Styles/Drug.css
+++ b/src/Styles/Drug.css
@@ -24,7 +24,7 @@
   flex-direction: column;
   /* background-color: #f1f7f7; */
   width: 100%;
-  max-height: 90%;
+  height: 90%;
   /* margin-top: 40px; */
   /* padding: 1rem 3rem 1rem 3rem; */
 }
@@ -52,7 +52,7 @@
 }
 
 .drug-heading h1 {
-  color: #1e2022;
+  color: #173e67;
   font-size: 1.7rem;
 }
 
